# structs/requests/branchesRequestDTO.go
@@ -3,5 +3,7 @@ package requests
 type BranchRequestDTO struct {
 	Branch      string
 	CountryCode string
+	PhoneNumber string
+	Location    string
 	AddedBy     string
 }
